# fluentcpp

./:  .clang-format  .clang-format  .gitignore  .lgtm.yml  CMakeLists.txt  README.md  annotated.html  asserts_8h.html  asserts_8h__dep__incl.map  asserts_8h__dep__incl.md5  asserts_8h__incl.map  asserts_8h__incl.md5  asserts_8h_source.html  classes.html  classfcpp_1_1Merge-members.html  classfcpp_1_1Merge.html  classfcpp_1_1Queryable-members.html  classfcpp_1_1Queryable.html  classfcpp_1_1WhenFalse-members.html  classfcpp_1_1WhenFalse.html  classfcpp_1_1WhenTrue-members.html  classfcpp_1_1WhenTrue.html  classfcpp_1_1asserts_1_1invariant-members.html  classfcpp_1_1asserts_1_1invariant.html  cmake-variants.json  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  footer_include.html  functions.html  functions_func.html  functions_rela.html  functions_type.html  globals.html  globals_defs.html  graph_legend.html  head_include.html  header_include.html  hierarchy.html  index.html  inherit_graph_0.map  (+50 more)
.github/workflows/: analyze.yml  build.yml  create_release_pkg_artifacts.sh  deploy_website.yaml  deps_install.sh  integrate.yml  release.yml
assets/: assets.md
assets/artwork/: CMakeLists.txt  fluentcpp-initial.xcf  fluentcpp.xcf
assets/doxygen/: CMakeLists.txt  Doxyfile.in  doxygen copy.css  doxygen.css  footer.html  header.html
assets/scripts/: bootstrap_doxygen.sh  create_client_cmake.sh  expand_html_includes.sh  functions.cmake  install.sh
assets/website/: head_include.html  header_include.html  style.css
configs/: CMakeLists.txt  assets.md
configs/doxygen/: CMakeLists.txt  Doxyfile.in  doxygen-awesome-darkmode-toggle.js  footer.html  header.html
configs/scripts/: create_file_layout_txt.sh
examples/: CMakeLists.txt  demo.cpp
js/: href.include.js
latex/: annotated.tex  asserts_8h.tex  asserts_8h__dep__incl.md5  asserts_8h__incl.md5  classfcpp_1_1Merge.tex  classfcpp_1_1Queryable.tex  classfcpp_1_1WhenFalse.tex  classfcpp_1_1WhenTrue.tex  classfcpp_1_1asserts_1_1invariant.tex  files.tex  hierarchy.tex  index.tex  query_8h.tex  query_8h__incl.md5  refman.tex  structfcpp_1_1traits_1_1is__additive.tex  structfcpp_1_1traits_1_1is__additive_3_01T_00_01typename_01std_1_1enable__if_3_01true_00_01declt3399724af7ed7df37860dbda26fb39c1.tex  structfcpp_1_1traits_1_1is__additive_3_01T_00_01typename_01std_1_1enable__if_3_01true_00_01declta7d15bfcdf1b84fcf05fcf5bdd23a925.md5  structfcpp_1_1traits_1_1is__additive__inherit__graph.md5  structfcpp_1_1traits_1_1is__equality__comparable.tex  structfcpp_1_1traits_1_1is__equality__comparable_3_01T_00_01typename_01std_1_1enable__if_3_01tru0efc435815e79d708eb5b6257ca6ebd7.tex  structfcpp_1_1traits_1_1is__equality__comparable_3_01T_00_01typename_01std_1_1enable__if_3_01tru526642dc252f6bf21aae735967a252f4.md5  structfcpp_1_1traits_1_1is__equality__comparable__inherit__graph.md5  structfcpp_1_1traits_1_1is__less__than__comparable.tex  structfcpp_1_1traits_1_1is__less__than__comparable_3_01T_00_01typename_01std_1_1enable__if_3_01t05232c38868503f50848057c1a3bbe59.md5  structfcpp_1_1traits_1_1is__less__than__comparable_3_01T_00_01typename_01std_1_1enable__if_3_01t881ef99a3d7b34664f13f5d3f9d1efbc.tex  structfcpp_1_1traits_1_1is__less__than__comparable__coll__graph.md5  traits_8h.tex  traits_8h__dep__incl.md5  traits_8h__incl.md5
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  defines_1.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  (+11 more)
src/: CMakeLists.txt  asserts.h  query.cpp  query.h  traits.h  transforms.cpp  transforms.h
tests/: CMakeLists.txt  benchmark.sh  benchmarks.cpp  benchmarks_baseline.cpp  benchmarks_common.h  benchmarks_delta.py  benchmarks_report.py  models.h  query_compound_test.cpp  query_integer_test.cpp  scratch.cpp  tests.cpp
