message(STATUS "Building and installing library.")

file(GLOB_RECURSE HEADER_FILES "*.h")
file(GLOB_RECURSE IMPL_FILES "*.cpp*")

add_library(fluentcpp STATIC ${HEADER_FILES} ${IMPL_FILES})

set_target_properties(fluentcpp 
  PROPERTIES
  PUBLIC_HEADER "${HEADER_FILES}"
  VERSION ${PROJECT_VERSION}  
  CXX_STANDARD 20
  CXX_STANDARD_REQUIRED YES)

install(TARGETS fluentcpp
  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}/fluentcpp COMPONENT lib
  PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/fluentcpp COMPONENT dev)
